--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -6,7 +6,14 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        android:hardwareAccelerated="true">
+        <meta-data
+    android:name="android.webkit.WebView.EnableSafeBrowsing"
+    android:value="false" />
+    <meta-data
+      android:name="android.webkit.WebSettings.Webview.WebViewPackageManager"
+      android:value="com.android.chrome:56.0.0.0" />
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" >
         <intent-filter>
       <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
