--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,4 +43,9 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 kotlin.target.jvm = 11
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Shubham1@1
+MYAPP_RELEASE_KEY_PASSWORD=Shubham1@1
+
 
