--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^3.9.1",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "^13.5.1"
+    "react-native-webview": "^13.6.0",
+    "v": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +29,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
